--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cycler==0.12.1
 et-xmlfile==1.1.0
 Flask==3.0.0
 fonttools==4.44.0
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.5
