--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,12 @@ openpyxl==3.1.2
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+plotly==5.18.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+seaborn==0.13.0
 six==1.16.0
+tenacity==8.2.3
 tzdata==2023.3
 Werkzeug==3.0.1
