--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ plotly==5.18.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+schedule==1.2.1
 seaborn==0.13.0
 six==1.16.0
 tenacity==8.2.3
