--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ contourpy==1.2.0
 cycler==0.12.1
 et-xmlfile==1.1.0
 Flask==3.0.0
+Flask-WTF==1.2.1
 fonttools==4.44.0
 gunicorn==21.2.0
 itsdangerous==2.1.2
@@ -26,3 +27,4 @@ six==1.16.0
 tenacity==8.2.3
 tzdata==2023.3
 Werkzeug==3.0.1
+WTForms==3.1.2
