--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fonttools==4.44.0
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.1
@@ -22,9 +23,12 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 schedule==1.2.1
+scikit-learn==1.3.2
+scipy==1.11.4
 seaborn==0.13.0
 six==1.16.0
 tenacity==8.2.3
+threadpoolctl==3.2.0
 tzdata==2023.3
 Werkzeug==3.0.1
 WTForms==3.1.2
